gobmkida/c2/purge_persistent_owl_cache
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/purge_persistent_owl_cache/src/engine/persistent.c:1120:6: error: use of undeclared identifier 'purge_persistent_owl_cache_last_purge_position_number'
if ( purge_persistent_owl_cache_last_purge_position_number != position_number ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/purge_persistent_owl_cache/src/engine/persistent.c:1122:1: error: use of undeclared identifier 'purge_persistent_owl_cache_last_purge_position_number'
purge_persistent_owl_cache_last_purge_position_number = position_number; 
^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/purge_persistent_owl_cache/src/engine/persistent.c:1134:24: error: use of undeclared identifier 'byte_9B389C'
v4 = ( unsigned __int8)byte_9B389C[i]; 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/purge_persistent_owl_cache/src/engine/persistent.c:1151:71: error: use of undeclared identifier 'owl_cache'
memcpy( &persistent_owl_cache[v1], &persistent_owl_cache[v0], sizeof( owl_cache)); 
                                                                      ^
4 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/purge_persistent_owl_cache/src/obj/1/persistent.o] Error 1
